[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-uc-residency-project"
version = "0.1.0"
description = "Real-world GPS navigation system with learner mode for residency programs"
readme = "README.md"
authors = [
    {name = "Team 3"}
]
urls = {homepage = "https://github.com/truthsir8739/GPS_UC_Residency_Project"}

requires-python = ">=3.8"
dependencies = [
    "osmnx>=1.9.0",
    "networkx>=2.8",
    "requests>=2.28.0",
    "geopy>=2.4.0",
    "matplotlib>=3.9.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["residency*"]
